prmière affichage des groupes de rap

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     </header>
     <div class="content">
         <div class= "choiceGroups">    
-            <a href="./html/rapGroups.html"><img src="./img/mainRap.jpeg" alt="Rap" >    </a>  
+            <a href="http://localhost/webProjet/html/rapGroups"><img src="./img/mainRap.jpeg" alt="Rap" >    </a>  
             
           <a href="./html/jazzGroups.html"><img src="./img/mainJazz.jpg" alt="Jazz" ></a>       
         </div>
     </div>
+
 </body>
 </html>
