--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="./css/style1.css">
 </head>
 <body>
-    <header>
-        <ul class="stylesNav">
-            <li>Style 1</li>
-            <li>Style 2</li>
-            <li>Style 3</li>
-            <li>Style 4</li>
-        </ul>
+    <header class="header">
+        
+            <ul class="stylesNav">
+                <li>Style 1</li>
+                <li>Style 2</li>
+                <li>Style 3</li>
+                <li>Style 4</li>
+            </ul>
+        </div>
+  
     </header>
     <div class="content">
         <div class= "choiceGroups">    
