--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
     <div class="content">
         <div class= "choiceGroups">    
-            <a href="./html/rapGroups.html"><img src="./img/mainRap.jpeg" alt="Rap" ></a>  
+            <a href="./html/rap/rapGroups.html"><img src="./img/mainRap.jpeg" alt="Rap" ></a>  
             
-          <a href="./html/jazzGroups.html"><img src="./img/mainJazz.jpg" alt="Jazz" ></a>       
+          <a href="./html/jazz/jazzGroups.html"><img src="./img/mainJazz.jpg" alt="Jazz" ></a>       
         </div>
     </div>
     <h2>The XMLHttpRequest Object</h2>
