création de la page rap groups et des pages person pour les groupes de rap

--- a/html/rap/arsenik.html
+++ b/html/rap/arsenik.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 </head>
 
+
+
 <body onload="ajaxRequest('../../json/groups.json', getIam)">
     <div class="container">
         <div>
@@ -28,8 +30,7 @@
 
     </div>
 
-    <script src="../../js/rap/rapGroups.js">
-    </script>
+    <script src="../../js/rap/rapGroups.js"></script>
 </body>
 
 </html>
