--- a/html/rap/rapGroups.html
+++ b/html/rap/rapGroups.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body onload="getJson()">
+<body onload="ajaxRequest('../../json/groups.json', getRapGroups)">
     <header class="bg-mic"></header>
     <div class="container">
         <div class="groups-liste">
@@ -21,7 +21,7 @@
 
                 <div>
 
-                    <a href="./iam.html"><img src="" alt=""> <br></a>
+                    <a href=""><img src="" alt=""> <br></a>
                     <p></p>
                 </div>
 
