--- a/html/rap/iam.html
+++ b/html/rap/iam.html
@@ -10,6 +10,7 @@
 </head>
 
 <body onload="ajaxRequest('../../json/groups.json', getIam)">
+    <header></header>
     <div class="container">
         <div>
             <img class="ficheImg" id="Img" src="" alt="">
