--- a/html/jazz/jazzGroups.html
+++ b/html/jazz/jazzGroups.html
@@ -48,6 +48,7 @@
 
         </div>
     </div>
+    <script src="../../js/lib.js"></script>
     <script src="../../js/jazz/jazGroups.js"></script>
 </body>
 
