--- a/html/rap/iam.html
+++ b/html/rap/iam.html
@@ -28,9 +28,8 @@
 
 
     </div>
-
-    <script src="../../js/rap/rapGroups.js">
-    </script>
+    <script src="../../js/lib.js"></script>
+    <script src="../../js/rap/rapGroups.js"></script>
 </body>
 
 </html>
