--- a/html/jazz/double.html
+++ b/html/jazz/double.html
@@ -11,6 +11,7 @@
 </head>
 
 <body onload="ajaxRequest('../../json/groups.json', getJazz)">
+    <header></header>
     <div id="containerPerso" class="container">
         <div>
             <img class="ficheImg" id="Img" src="" alt="">
@@ -28,7 +29,7 @@
 
 
     </div>
-
+    <script src="../../js/lib.js"></script>
     <script src="../../js/jazz/jazGroups.js">
     </script>
 </body>
