--- a/html/rap/arsenik.html
+++ b/html/rap/arsenik.html
@@ -12,6 +12,7 @@
 
 
 <body onload="ajaxRequest('../../json/groups.json', getIam)">
+    <header></header>
     <div class="container">
         <div>
             <img class="ficheImg" id="Img" src="" alt="">
@@ -29,7 +30,7 @@
 
 
     </div>
-
+    <script src="../../js/lib.js"></script>
     <script src="../../js/rap/rapGroups.js"></script>
 </body>
 
