--- a/html/rap/rapGroups.html
+++ b/html/rap/rapGroups.html
@@ -48,6 +48,7 @@
 
         </div>
     </div>
+    <script src="../../js/lib.js"></script>
     <script src="../../js/rap/rapGroups.js"></script>
 </body>
 
